--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -190,8 +190,9 @@ The set of features will grow with future releases, aligned with the development
         <li>On-the-fly Code Formatting (format block when finishing it with <code>}</code> or <code>;</code>)
         <li>Format Selected Code
     </ul>
-    <li>User settings:
+    <li>Plugin settings:
         <ul>
+            <li>User settings for language server
             <li>Node.js interpreter path (to modify result of automatic search)
             <li>Additional environment variables for CDS Language Server
         </ul>
@@ -219,5 +220,6 @@ The set of features will grow with future releases, aligned with the development
 <h3>Fixed</h3>
 <ul>
     <li>Correctly validate Node.js interpreter path when opening settings
+</ul>
 ]]></change-notes>
 </idea-plugin>
