--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,14 +6,13 @@
 <ul>
     <li>Syntax highlighting</li>
     <li>Code completion</li>
-    <li>Goto definition</li>
+    <li>Go to definition, declaration, and implementation</li>
     <li>Find references</li>
     <li>Highlight usages in file</li>
     <li>Structure tool window (Outline)</li>
-    <li>Navigate Symbol... (symbols in workspace)</li>
     <li>Hover documentation</li>
-    <li>Document formatting</li>
-    <li>Diagnostics</li>
+    <li>Document and range formatting</li>
+    <li>Diagnostics (errors and warnings)</li>
     <li>Quick fixes</li>
 </ul>
 The set of features will grow with future releases, aligned with the development of the JetBrains IntelliJ LSP API.]]></description>
@@ -174,9 +173,29 @@ The set of features will grow with future releases, aligned with the development
 
 
     <change-notes><![CDATA[
-<h3>Changed</h3>
+<h3>Added</h3>
 <ul>
-    <li>Upgrade LSP4IJ to 0.15.0, fixing Workspace Symbols</li>
+    <li>Support for <i>Community Editions</i> of IntelliJ IDEs
+        <br/>(The plugin is now based on the <i>LSP4IJ</i> plugin, which therefore gets installed in addition.)
+    <li>IDE features unlocked via LSP4IJ 0.15.0:
+    <ul>
+        <li>Go to Declaration and Implementation (navigate to symbol declarations and implementations)</li>
+        <li>Highlight Usages in File (highlights symbol usages)</li>
+        <li>Structure Tool Window (populates and updates the file structure panel)</li>
+        <li>Go to Symbol (find/list symbols in workspace)</li>
+        <li>On-the-fly Code Formatting (format block when finishing it with <code>}</code> or <code>;</code>)</li>
+        <li>Format Selected Code (range formatting)</li>
+    </ul>
+    <li>Plugin settings:
+        <ul>
+            <li>User settings for language server
+            <li>Node.js interpreter path (to modify result of automatic search)
+            <li>Additional environment variables for CDS Language Server
+        </ul>
+    </li>
+    <li>Intention to convert HTTP files to IntelliJ-compatible format (useful for .http files created with <code>cds add http</code>)
+    <li>Code-Style setting to put multiple parenthesized arguments or filters on a new line
+    <li>Actions to open or copy the paths of the log files for LSP stdio and server tracing, respectively
 </ul>
 ]]></change-notes>
 </idea-plugin>
