--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -174,52 +174,9 @@ The set of features will grow with future releases, aligned with the development
 
 
     <change-notes><![CDATA[
-<h3>Added</h3>
-<ul>
-    <li>Support for <i>Community Editions</i> of IntelliJ IDEs
-        <br/>(The plugin is now based on the <i>LSP4IJ</i> plugin, which therefore gets installed in addition.)
-    <li>IDE features unlocked via LSP4IJ 0.14.2:
-    <ul>
-        <li>Highlight Usages in File (highlights symbol usages)
-        <li>Structure Tool Window (populates and updates the file structure panel)
-        <li>Go to Symbol (find/list symbols in workspace)</li>
-        <li>On-the-fly Code Formatting (format block when finishing it with <code>}</code> or <code>;</code>)
-        <li>Format Selected Code
-    </ul>
-    <li>Plugin settings:
-        <ul>
-            <li>User settings for language server
-            <li>Node.js interpreter path (to modify result of automatic search)
-            <li>Additional environment variables for CDS Language Server
-        </ul>
-    </li>
-    <li>Intention to convert HTTP files to IntelliJ-compatible format (useful for .http files created with <code>cds add http</code>)
-    <li>Code-Style setting to put multiple parenthesized arguments or filters on a new line
-    <li>Actions to open or copy the paths of the log files for LSP stdio and server tracing, respectively
-</ul>
 <h3>Changed</h3>
 <ul>
-    <li>Search suitable Node.js interpreter on first start of plugin
-    <li>include @sap/cds-lsp 9.2.1 with the following changes since 9.1.0:
-        <ul>
-            <li>Formatting:
-                <ul>
-                    <li>Added options `whitespaceBeforeColonInParamList` and `whitespaceAfterColonInParamList` to control whitespace around colons in parameter lists
-                    <li>fix: Colons in type paths are no longer aligned with other colons, nor are they padded with spaces
-                </ul>
-            </li>
-            <li>Maximum log-file size can now be increased to at most 1 GB (default limit unchanged at 10 MB)
-            <li>Performance optimizations when updating dependency net of CDS file dependencies</li>
-            <li>fix: Using paths which end with a folder name were not resolved correctly</li>
-            <li>fix: Formatter support for <code>==</code> operator</li>
-            <li>fix: Goto implementation for NodeJS services, entities, events, actions and functions, services and entities for Java</li>
-        </ul>
-    </li>
-    <li>Automatically fix invalid Node.js interpreter path in settings on plugin start or when opening settings
-</ul>
-<h3>Fixed</h3>
-<ul>
-    <li>Correctly validate Node.js interpreter path when opening settings
+    <li>Upgrade LSP4IJ to 0.15.0, fixing Workspace Symbols</li>
 </ul>
 ]]></change-notes>
 </idea-plugin>
