--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -144,7 +144,7 @@
         <action id="com.sap.cap.cds.intellij.showLspServerLogs"
                 class="com.sap.cap.cds.intellij.lspServer.ShowLspServerLogsAction"
                 text="Show Log File"
-                description="Finds and opens the most recent CDS LSP server log file.">
+                description="Opens the most recent CDS LSP server log file.">
             <add-to-group group-id="com.sap.cap.cds.intellij.group.cds.logs.lspServer"
                           anchor="first"/>
         </action>
@@ -160,7 +160,7 @@
         <action id="com.sap.cap.cds.intellij.showStdioLogs"
                 class="com.sap.cap.cds.intellij.lsp.ShowStdioLogsAction"
                 text="Show Log File"
-                description="Finds and opens the stdio log file.">
+                description="Opens the stdio log file.">
             <add-to-group group-id="com.sap.cap.cds.intellij.group.cds.logs.stdio"
                           anchor="first"/>
         </action>
