fix: exclude .json files from being handled by cds-lsp

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -89,7 +89,7 @@
 
         </server>
 
-        <fileNamePatternMapping patterns="*.cds;*.json"
+        <fileNamePatternMapping patterns="*.cds"
                                 serverId="cds"
                                 languageId="cds"/>
 
