--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -177,6 +177,10 @@
 
 
     <change-notes><![CDATA[
+<h3>Fixed</h3>
+<ul>
+    <li>Exclude .json files from being handled by CDS LSP server</li>
+</ul>
 <h3>Changed</h3>
 <ul>
     <li>Upgrade LSP4IJ to 0.15.0, fixing Workspace Symbols</li>
