--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -183,7 +183,25 @@
 </ul>
 <h3>Changed</h3>
 <ul>
-    <li>Upgrade LSP4IJ to 0.15.0, fixing Workspace Symbols</li>
+    <li>Important: minimum required Node.js version is now 22.15.1</li>
+    <li>Include @sap/cds-lsp 9.4.0 with the following changes since 9.2.1:
+        <ul>
+            <li>fix: Code completion for annotations:
+                <ul>
+                    <li>In certain cases proposals added a superfluous `@` character</li>
+                    <li>Entries in annotation expressions could be shown twice</li>
+                    <li>SQL functions could have been suggested in annotation expressions</li>
+                </ul>
+            </li>
+            <li>fix: Element names are now correctly highlighted even without type specification</li>
+            <li>Remove temporary user setting `cds.workspace.fastDiagnosticsMode`. The default so far `clear` is now the only mode.</li>
+        </ul>
+    </li>
+    <li>Upgrade LSP4IJ to 0.17.0, fixing Workspace Symbols</li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+    <li>Exclude .json files from being handled by CDS LSP server</li>
 </ul>
 ]]></change-notes>
 </idea-plugin>
