fix: add required permissions to prepare-release workflow

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -25,6 +25,10 @@ on:
           - 'major'
         default: 'auto'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   prepare:
     runs-on: ubuntu-latest
